# AdventOfCode

./: .gitignore  .hlint.yaml  AdventOfCode.cabal  AdventOfCode2019.cabal  CHANGELOG.md  LICENSE  README.md  flake.nix  package.yaml  stack.yaml
AdventOfCode/: Main.hs  Solution.hs  Util.hs
AdventOfCode/Year2015/: Day01.hs  Day02.hs  Day03.hs  Day05.hs  Day06.hs  Year2015.hs
AdventOfCode/Year2019/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Year2019.hs
AdventOfCode/Year2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Year2020.hs
AdventOfCode/Year2021/: Day04.hs  Day05.hs  Day07.hs  Year2021.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Main.hs  Solution.hs  Util.hs
src/Year2015/: Day01.hs  Day02.hs  Day04.hs  Day05.hs  Day06.hs
src/Year2019/: Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs
src/Year2020/: Day02.hs  Day03.hs  Day04.hs  Day07.hs  Day08.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Year2020.hs
src/Year2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day06.hs  Day08.hs  Day09.hs  Day10.hs  Year2021.hs
src/Year2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Year2022.hs
