cabal-version:      3.4

name:               AdventOfCode
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             David Richey
build-type:         Simple

common warnings
    -- enable all warnings _except_...
    -- shadowing is good, actually
    -- incomplete patterns aren't good, but it's not unusual for AOC problems to have some invariant that's not worth expressing in the code
    -- idc about type defaults
    ghc-options: -Wall -Wno-name-shadowing -Wno-incomplete-patterns -Wno-type-defaults

executable AdventOfCode
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:
        base ^>=4.15.1.0
      , base16-bytestring
      , bytestring
      , cmdargs
      , containers
      , cryptohash-md5
      , either
      , lens
      , linear
      , megaparsec
      , multiset
      , parser-combinators
      , regex-pcre
      , split
      , text
      , vector

    other-modules:
        Solution
        Util
        Year2015.Day01
        Year2015.Day02
        Year2015.Day03
        Year2015.Day04
        Year2015.Day05
        Year2015.Day06
        Year2015.Year2015
        Year2019.Day01
        Year2019.Day02
        Year2019.Day03
        Year2019.Day04
        Year2019.Day05
        Year2019.Day06
        Year2019.Day07
        Year2019.Day08
        Year2019.Day09
        Year2019.Day10
        Year2019.Day11
        Year2019.Day12
        Year2019.Day13
        Year2019.Day14
        Year2019.Year2019
        Year2020.Day01
        Year2020.Day02
        Year2020.Day03
        Year2020.Day04
        Year2020.Day05
        Year2020.Day06
        Year2020.Day07
        Year2020.Day08
        Year2020.Day09
        Year2020.Day10
        Year2020.Day11
        Year2020.Day12
        Year2020.Day13
        Year2020.Day14
        Year2020.Day15
        Year2020.Day16
        Year2020.Day17
        Year2020.Day18
        Year2020.Day19
        Year2020.Year2020
        Year2021.Day01
        Year2021.Day02
        Year2021.Day03
        Year2021.Day04
        Year2021.Day05
        Year2021.Day06
        Year2021.Day07
        Year2021.Day08
        Year2021.Day09
        Year2021.Day10
        Year2021.Year2021
        Year2022.Day01
        Year2022.Day02
        Year2022.Day03
        Year2022.Day04
        Year2022.Day05
        Year2022.Day06
        Year2022.Year2022
